--- a/_config.yml
+++ b/_config.yml
@@ -315,14 +315,14 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
               kilo: k
               unit: words
         page:
-          masthead: # 显示顶栏
+          title: # 为每个页面自动生成一个 H1 title
             enable: true
           katex: # katex 数学公式插件
             enable: true
             append: | # 对KaTeX过长公式渲染超出页面的修正，感谢[@AmachiInori](https://github.com/wu-kan/wu-kan.github.io/issues/13)
               <link
                 rel="stylesheet"
-                href="https://cdn.jsdelivr.net/npm/katex@0.13.0/dist/katex.min.css"
+                href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css"
               />
               <style>
                 .katex-display>.katex {
@@ -330,7 +330,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                 }
               </style>
               <script
-                src="https://cdn.jsdelivr.net/combine/npm/katex@0.13.0/dist/katex.min.js,npm/katex@0.13.0/dist/contrib/auto-render.min.js"
+                src="https://cdn.jsdelivr.net/combine/npm/katex@0.13.11/dist/katex.min.js,npm/katex@0.13.11/dist/contrib/auto-render.min.js"
                 async="async"
                 onload='renderMathInElement(document.body, { delimiters: [{left: "$$", right: "$$", display: true}, { left: "$", right: "$", display: false }, {left: "\\(", right: "\\)", display: false}, {left: "\\[", right: "\\]", display: true}]})'
               ></script>
@@ -351,7 +351,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                 }
               </style>
               <script
-                src="https://cdn.jsdelivr.net/npm/mermaid@8.9.2/dist/mermaid.min.js"
+                src="https://cdn.jsdelivr.net/npm/mermaid@8.10.1/dist/mermaid.min.js"
                 async="async"
                 onload='
                   for(let x of document.getElementsByClassName("language-mermaid"))
@@ -440,7 +440,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
           prepend: |
             <link
               rel="stylesheet"
-              href="https://cdn.jsdelivr.net/combine/npm/reveal.js@4.1.0/dist/reveal.min.css,npm/reveal.js@4.1.0/dist/theme/serif.min.css"
+              href="https://cdn.jsdelivr.net/combine/npm/reveal.js@4.1.1/dist/reveal.min.css,npm/reveal.js@4.1.1/dist/theme/serif.min.css"
             />
             <style>
               .sidebar {
@@ -456,7 +456,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
           append: |
             <script
               async="async"
-              src="https://cdn.jsdelivr.net/combine/npm/reveal.js@4.1.0/dist/reveal.min.js,npm/reveal.js@4.1.0/plugin/markdown/markdown.min.js,npm/reveal.js@4.1.0/plugin/math/math.min.js,npm/reveal.js@4.1.0/plugin/highlight/highlight.min.js"
+              src="https://cdn.jsdelivr.net/combine/npm/reveal.js@4.1.1/dist/reveal.min.js,npm/reveal.js@4.1.1/plugin/markdown/markdown.min.js,npm/reveal.js@4.1.1/plugin/math/math.min.js,npm/reveal.js@4.1.1/plugin/highlight/highlight.min.js"
               onload="
               for(let x of document.getElementsByClassName('wrap'))
                 x.classList.add('reveal');
@@ -488,7 +488,7 @@ plugins: # <https://jekyllrb.com/docs/plugins/>
   - jekyll-feed # 为站点生成RSS源
   - jekyll-remote-theme # 使用remote_theme插件实现主题的前后分离，详见<https://github.com/benbalter/jekyll-remote-theme/>
 
-remote_theme: https://github.com/wu-kan/jekyll-theme-WuK@4.0.2 #使用固定版本号以防止主题更新导致站点显示错乱
+remote_theme: https://github.com/wu-kan/jekyll-theme-WuK@4.0.5 #使用固定版本号以防止主题更新导致站点显示错乱
 
 readme_index: # 缺失index.md和index.html时，使用README.md代替之
   with_frontmatter: true # 支持带有yaml头的README
