--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: SYSU-SCC # 站点标题
 description: | # 头像背后的信息（html格式），<br/>代表换行
-  TBD
+  Student Cluster Competition Team at Sun Yat-sen University
 url: https://scc.sysu.tech # 你的域名，例如 https://wu-kan.github.io
 baseurl: "" # 假如你的博客是建在某个目录下的，请在这里加上目录名，并且下面配置的所有链接里的`/assets`前也要加，即`/your_baseurl/assets`。这一项结尾不要有'/'。
 
